# TrojanLetter

./: .gitignore  CMakeLists.txt  README.md
lib/: ArgHandler.h  Encryption.h  Injector.h  TrojanLetter.h
lib/Encryption/: ChaCha20Poly1305Encryptor.h  Encryptor.h  XorEncryptor.h
src/: ArgHandler.cpp  Encryption.cpp  Injector.cpp  TrojanLetter.cpp  main.cpp
src/Encryption/: ChaCha20Poly1305Encryptor.cpp  Encryptor.cpp  XorEncryptor.cpp
tests/: EncryptionTests.cpp
